[gd_scene load_steps=5 format=3 uid="uid://bqna5put7r6to"]

[ext_resource type="Script" path="res://card_game/playing_field/animation/number_animation.gd" id="1_npeo6"]
[ext_resource type="Theme" uid="uid://bqxbmpg0ub86d" path="res://global_theme.tres" id="2_ik6nh"]

[sub_resource type="Animation" id="Animation_uhlvg"]
resource_name = "DecayAnimation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1.8025),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lt36f"]
_data = {
"DecayAnimation": SubResource("Animation_uhlvg")
}

[node name="NumberAnimation" type="Node2D"]
modulate = Color(1, 1, 1, 0)
script = ExtResource("1_npeo6")

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -16.0
offset_right = 21.0
offset_bottom = 20.0
theme = ExtResource("2_ik6nh")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="DecayAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lt36f")
}

[connection signal="animation_finished" from="DecayAnimationPlayer" to="." method="_on_decay_animation_player_animation_finished"]
